package ast;

public class IntNode extends ExprNode {
    public final int value;
    public IntNode(int value) {
        this.value = value;
    }
}
