package ast;

public abstract class ASTNode {
    
}
