package ast;

public abstract class StatementNode extends ASTNode {

}
